2005-10-12  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/24092
	* trans-types.c (gfc_get_derived_type): Insert code to obtain backend
	declaration for derived types, building if necessary.  Return the
	derived type if the fields have been built by this process.  Otherwise,
	continue as before but using the already obtained backend_decls for the
	derived type components.  Change the gcc_assert to act on the field.

2005-10-10  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/24092
	* gfortran.dg/derived_pointer_recursion.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105331 138bc75d-0d04-0410-961f-82ee72b054a4